# 0817

./: .gitattributes  README.md
Control/: .gitignore  .rosinstall  CMakeLists.txt  PndControl.sh  README.md  _setup_util.py  buildrobot.sh  buildwebotsim.sh  cleanrobot.sh  cleanwebotsim.sh  format_all.sh  local_setup.sh  run.sh  setup.sh  version.h.in
Control/MotionPlan/include/: gaitPlan.h  planTools.h  uniPlan.h
Control/MotionPlan/src/: gaitPlan.cpp  planTools.cpp  uniPlan.cpp
Control/RobotControl/include/: DataPackage.h  Estimation_Operator.h  KalmanFilter.h  LowPassFilter.h  MomentumController.h  QPproblem.h  Robot_Constructor.h  Robot_Controller.h  Robot_Data.h  Sensor.h  Task.h  basicfunction.h  controller_lib.h  public_parament.h  series_parallel.h  udp_hand_speed.h  wbc_solver.h
Control/RobotControl/src/: DataPackage.cpp  Estimation_Operator.cpp  KalmanFilter.cpp  LowPassFilter.cpp  MomentumController.cpp  QPproblem.cpp  Robot_Constructor.cpp  Robot_Controller.cpp  Robot_Data.cpp  Sensor.cpp  Task.cpp  basicfunction.cpp  controller_lib.cpp  public_parament.cpp  series_parallel.cpp  udp_hand_speed.cpp  wbc_solver.cpp
Control/RobotInterface/: CMakeLists.txt  RobotInterfaceImpl.cpp  RobotInterfaceImpl.h
Control/RobotInterface/JointInterface/include/: JointInterface.h
Control/RobotInterface/JointInterface/pnd-cpp-sdk/: CMakeLists.txt  README.md
Control/RobotInterface/JointInterface/pnd-cpp-sdk/doc/: Doxyfile
Control/RobotInterface/JointInterface/pnd-cpp-sdk/src/: group.cpp  group.hpp  groupCommand.cpp  groupCommand.hpp  groupFeedback.cpp  groupFeedback.hpp  lookup.cpp  lookup.hpp  util.hpp  version.cpp  version.hpp
Control/RobotInterface/JointInterface/src/: JointInterface.cpp
Control/RobotInterface/S2P/include/: functionIKID_S2P.h
Control/RobotInterface/S2P/src/: functionIKID_S2P.cpp
Control/RobotInterface/abs/: abs_encoder.cpp  abs_encoder.h
Control/RobotInterface/config/: joint_config.json  joint_config_2.json  joint_config_new.json  joint_config_old.json
Control/RobotInterface/include/: RobotInterface.h
Control/RobotInterface/src/: RobotInterface.cpp
Control/RobotInterface/wrist_S2P/include/: series_parallel.h
Control/RobotInterface/wrist_S2P/src/: series_parallel.cpp
Control/Sources/config/: joint_pd_config.json  pnc_config.json  pnc_config_sim.json
Control/Sources/hand/: carrybox.py  gentle.py  hello.py  stand.py  unigait.py
Control/Sources/motion/mocap/: motion1.txt  motion2.txt  motion3.txt  motion4.txt
Control/Sources/motion/mocap_standard_plus29/: motion1.txt  motion2.txt  motion3.txt  motion4.txt
Control/Sources/motion/mocap_standard_plus29_with_hand/: motion1.txt  motion2.txt  motion3.txt  motion4.txt  motion5.txt  motion6.txt
Control/Sources/python_scripts/: check_abs.py  encoder_name.json  joint_abs_config.json  joint_abs_config_dvt_template.json  joint_abs_config_evt_template.json  read_abs.py  set_part_zero.py  set_zero.py  set_zero.sh
Control/Sources/urdf/: DuckDuck.urdf  adam_lite.urdf  adam_lite_simple.urdf  adam_standard.urdf  standard_plus23.urdf  standard_plus29.urdf  standard_plus53.urdf
Control/StateEstimation/include/: AccKalmanFilter.h  LeggedKalmanFilter.h  WalkStateEstimate.h
Control/StateEstimation/src/: AccKalmanFilter.cpp  LeggedKalmanFilter.cpp  WalkStateEstimate.cpp
Control/StateMachine/include/: StateGenerator.h  XFsmMgr.h  XFsmState.h  joystick.h  state.h
Control/StateMachine/src/: StateGenerator.cpp  XFsmMgr.cpp  XFsmState.cpp  joystick.cpp  state.cpp
Control/Webots/controllers/mpc_controller/include/: webotsInterface.h
Control/Webots/controllers/mpc_controller/src/: main.cpp  webotsInterface.cpp
Control/Webots/meshes_DuckDuck/: base.STL  left_ankle_pitch.STL  left_ankle_roll.STL  left_hip_roll.STL  left_knee_pitch.STL  neck_pitch.STL  right_hip_roll.STL  right_hip_yaw.STL  throat_roll.STL  throat_yaw.STL
Control/Webots/meshes_standard/: vn100-0001.stl
Control/Webots/meshes_standard_plus/: L_index_distal.STL  L_index_proximal.STL  L_middle_distal.STL  L_middle_proximal.STL  L_pinky_distal.STL  L_pinky_proximal.STL  L_ring_distal.STL  L_ring_proximal.STL  L_thumb_distal.STL  L_thumb_intermediate.STL  L_thumb_proximal.STL  L_thumb_proximal_base.STL  R_index_distal.STL  R_index_distalR_middle_proximal.STL  R_index_proximal.STL  R_middle_distal.STL  R_pinky_distal.STL  R_pinky_proximal.STL  R_ring_distal.STL  R_ring_proximal.STL  R_thumb_distal.STL  R_thumb_intermediate.STL  R_thumb_proximal.STL  R_thumb_proximal_base.STL  inspire_Left.STL  inspire_Right.STL  wristPitchLeft.STL  wristPitchRight.STL
Control/Webots/rospub/include/: dataPub.h
Control/Webots/rospub/src/: dataPub.cpp
Control/Webots/worlds/: DuckDuck.wbt  adam_lite_simple.wbt  adam_lite_v1.1_world.wbt  adam_standard_world.wbt  adma_standard_plus_23dof_withPendulum.wbt  adma_standard_plus_23dof_world.wbt  adma_standard_plus_29dof_world.wbt  adma_standard_plus_53dof_world.wbt
Control/bug record/: .gitignore  Z2S_state.txt  zero_state_ik_test.txt  zero_state_ok.txt
Control/bug record/keyboard_test/: CMakeLists.txt  keyboard.cpp  keyboard.h  main.cpp
Control/bug record/rbdl_test/: CMakeLists.txt  example.cpp  read_urdf.cpp  result_analysis.txt  run.sh
Control/example/include/vnIMU/: vnIMU.h
Control/example/include/vnIMU/vn/: attitude.h  boostpython.h  compiler.h  compositedata.h  consts.h  conversions.h  criticalsection.h  dllvalidator.h  error_detection.h  event.h  exceptions.h  export.h  ezasyncdata.h  int.h  matrix.h  memoryport.h  mock.h  nocopy.h  packet.h  (+14 more)
Control/example/src/: main.cpp
Control/example/src/vnIMU/: vnIMU.cpp
Control/nokov/include/: NokovClinet.h  NokovSDKCAPI.h  NokovSDKClient.h  NokovSDKTypes.h  Utility.h  data_nokov.h
Control/nokov/src/: NokovClinet.cpp
Control/plot/: AdamComBodyChest.xml  AdamComBodyChestDot.xml  AdamJointStates.xml  AdamObserveData.xml  AdamRobotStates.xml  JointState.xml  JointState_HEAD_PVT.xml  JointState_LEFT_LEG_P.xml  JointState_LEFT_LEG_T.xml  JointState_LEFT_LEG_V.xml  JointState_RIGHT_LEG_P.xml  JointState_RIGHT_LEG_T.xml  JointState_RIGHT_LEG_V.xml
(+384 files in other folders)
